[package]
name = "parval"
version = "0.2.0"
edition = "2024"
authors = ["Wayne Van Son <waynevanson@gmail.com>"]
description = "Validation pattern compatible with concurrency models"
license = "MIT"
keywords = ["validation", "monad", "structure", "control", "flow"]
repository = "https://github.com/waynevanson/parval"
